--- a/src/map_generator/CMakeLists.txt
+++ b/src/map_generator/CMakeLists.txt
@@ -9,7 +9,7 @@ file (GLOB MAP_GENERATOR_SRC
 )
 
 add_library(MapGenerator SHARED
-    ${OPENSIMPLEX_HEADERS} ${OPENSIMPLEX_SRC} ${MAP_GENERATOR_HEADERS} ${MAP_GENERATOR_SRC}
+    ${MAP_GENERATOR_HEADERS} ${MAP_GENERATOR_SRC}
 )
 
 target_link_libraries(
